# xiaozhi-pc

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  memo.txt  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  application.cc  application.h  audio_codec.cc  audio_codec.h  background_task.cc  background_task.h  esp_log.h  main.cc  opus_wrapper.cc  opus_wrapper.h  ota.cc  ota.h  settings.cc  settings.h  system_info.cc  system_info.h
src/display/: display.cc  display.h
src/impl/: paho_mqtt.cc
src/interface/: backlight.h  board.h  mqtt.h  udp.h
src/porting/: entry.cc  esp_err.h  esp_event.h  esp_log.h  esp_port.h  nvs_flash.cc  nvs_flash.h
src/porting/freertos/: FreeRTOS.h  event_groups.cc  event_groups.h  task.cc  task.h
src/porting/impl/: board.cc  fake_board.cc  fake_board.h  http_client.cc  http_client.h  opus_wrapper.cc  opus_wrapper.h  paho_mqtt.h  sdl_audio_codec.cc  sdl_audio_codec.h  sdl_audio_processor.cc  sdl_audio_processor.h  udp_client.cc  udp_client.h  ui_thread.cc  ui_thread.h
src/protocols/: mqtt_protocol.cc  mqtt_protocol.h  protocol.cc  protocol.h
